# cvdrone

./: .gitignore  CMakeLists.txt  output-point-1-p.csv  output-point-7-i-1.csv  output.csv  output1.csv  readme.md
csv/: output-.001-a.csv  output-.001-b.csv  output-.002.csv  output-.003-a.csv  output-.003-b.csv  output-.003-c.csv  output-point-7-p.csv  output.csv
source/: CMakeLists.txt
source/drone/: CMakeLists.txt  control.cpp  main.cpp  structures.h
source/drone/ardrone/: command.cpp
source/drone/audio/: audio.cpp  audio.h
source/drone/lineFollowing/: line_simplification.h  line_utilities.cpp  line_utilities.h  record.cpp  record.h
source/drone/manual/: manual.cpp  manual.h
source/drone/objectFollowing/: objectFollowing.cpp  objectFollowing.h
source/testing_cv/: CMakeLists.txt  testing.cpp
src/: CMakeLists.txt  control.cpp  control.h  main.cpp  structures.h
src/ardrone/: command.cpp  video.cpp
src/lineFollowing/: lineFollowing.cpp  lineFollowing.h  line_simplification.cpp  line_simplification.h  line_utilities.cpp  line_utilities.h  pid.cpp  pid.h  record.cpp
src/manual/: manual.cpp  manual.h
src/objectFollowing/: objectFollowing.cpp  objectFollowing.h
testing_cv/: CMakeLists.txt  testing.cpp
tests/videos/: tape_video_1.m4v.REMOVED.git-id  tape_video_2.m4v.REMOVED.git-id  tape_video_3.m4v.REMOVED.git-id  tape_video_4.m4v.REMOVED.git-id  tape_video_5.m4v.REMOVED.git-id  tape_video_6.m4v.REMOVED.git-id  top_down_1.m4v.REMOVED.git-id  top_down_2.m4v.REMOVED.git-id  top_down_3.m4v  top_down_3.m4v.REMOVED.git-id  top_down_4.m4v.REMOVED.git-id
tour_audio_files/: 01 CURENT.mp3.REMOVED.git-id  02 Seelab.mp3.REMOVED.git-id  03 Computer Vision Lab.mp3.REMOVED.git-id  test_audio_file.mp3.REMOVED.git-id
